--- a/config/config.json
+++ b/config/config.json
@@ -16,7 +16,7 @@
     "password": "123456",
     "host": "127.0.0.1",
     "port": 3306,
-    "dbname": "db1"
+    "dbname": "douyin"
   },
   "redis": {
     "host": "127.0.0.1",
