--- a/config/config.json
+++ b/config/config.json
@@ -1,6 +1,7 @@
 {
-  "version": "v0.1",
   "jwt_key": "simple douyin jwt key",
+  "start_time": "2023-10-10",
+  "machine_id": 1,
   "hertz": {
     "host": "0.0.0.0",
     "port": 8888
