--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,123 +1,199 @@
 version: '3.7'
 services:
-  mysql:
-    image: mysql:latest
+#   mysql:
+#     image: mysql:latest
+#     ports:
+#       - "3306:3306"
+#     environment:
+#       MYSQL_ROOT_PASSWORD: '123456'
+#       MYSQL_DATABASE: douyin
+#     container_name: Mysql-douyin
+# 
+#   redis:
+#     image: redis:latest
+#     ports:
+#       - "6379:6379"
+#     container_name: Redis-douyin
+# 
+#   kafka-0:
+#     image: bitnami/kafka:latest
+#     ports:
+#       - "9092:9092"
+#     environment:
+#       # KRaft settings
+#       - KAFKA_CFG_NODE_ID=0
+#       - KAFKA_CFG_PROCESS_ROLES=controller,broker
+#       - KAFKA_CFG_CONTROLLER_QUORUM_VOTERS=0@kafka-0:9093,1@kafka-1:9093,2@kafka-2:9093
+#       - KAFKA_KRAFT_CLUSTER_ID=abcdefghijklmnopqrstuv
+#       # Listeners
+#       - KAFKA_CFG_LISTENERS=PLAINTEXT://:9092,CONTROLLER://:9093
+#       - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://192.168.31.247:9092
+#       - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=PLAINTEXT:PLAINTEXT,CONTROLLER:PLAINTEXT
+#       - KAFKA_CFG_CONTROLLER_LISTENER_NAMES=CONTROLLER
+#       - KAFKA_CFG_INTER_BROKER_LISTENER_NAME=PLAINTEXT
+#       # Clustering
+#       - KAFKA_CFG_OFFSETS_TOPIC_REPLICATION_FACTOR=3
+#       - KAFKA_CFG_TRANSACTION_STATE_LOG_REPLICATION_FACTOR=3
+#       - KAFKA_CFG_TRANSACTION_STATE_LOG_MIN_ISR=2
+#     container_name: Kafka-0-douyin
+#   kafka-1:
+#     image: bitnami/kafka:latest
+#     ports:
+#       - "9093:9092"
+#     environment:
+#       # KRaft settings
+#       - KAFKA_CFG_NODE_ID=1
+#       - KAFKA_CFG_PROCESS_ROLES=controller,broker
+#       - KAFKA_CFG_CONTROLLER_QUORUM_VOTERS=0@kafka-0:9093,1@kafka-1:9093,2@kafka-2:9093
+#       - KAFKA_KRAFT_CLUSTER_ID=abcdefghijklmnopqrstuv
+#       # Listeners
+#       - KAFKA_CFG_LISTENERS=PLAINTEXT://:9092,CONTROLLER://:9093
+#       - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://192.168.31.247:9093
+#       - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=PLAINTEXT:PLAINTEXT,CONTROLLER:PLAINTEXT
+#       - KAFKA_CFG_CONTROLLER_LISTENER_NAMES=CONTROLLER
+#       - KAFKA_CFG_INTER_BROKER_LISTENER_NAME=PLAINTEXT
+#       # Clustering
+#       - KAFKA_CFG_OFFSETS_TOPIC_REPLICATION_FACTOR=3
+#       - KAFKA_CFG_TRANSACTION_STATE_LOG_REPLICATION_FACTOR=3
+#       - KAFKA_CFG_TRANSACTION_STATE_LOG_MIN_ISR=2
+#     container_name: Kafka-1-douyin
+#   kafka-2:
+#     image: bitnami/kafka:latest
+#     ports:
+#       - "9094:9092"
+#     environment:
+#       # KRaft settings
+#       - KAFKA_CFG_NODE_ID=2
+#       - KAFKA_CFG_PROCESS_ROLES=controller,broker
+#       - KAFKA_CFG_CONTROLLER_QUORUM_VOTERS=0@kafka-0:9093,1@kafka-1:9093,2@kafka-2:9093
+#       - KAFKA_KRAFT_CLUSTER_ID=abcdefghijklmnopqrstuv
+#       # Listeners
+#       - KAFKA_CFG_LISTENERS=PLAINTEXT://:9092,CONTROLLER://:9093
+#       - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://192.168.31.247:9094
+#       - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=PLAINTEXT:PLAINTEXT,CONTROLLER:PLAINTEXT
+#       - KAFKA_CFG_CONTROLLER_LISTENER_NAMES=CONTROLLER
+#       - KAFKA_CFG_INTER_BROKER_LISTENER_NAME=PLAINTEXT
+#       # Clustering
+#       - KAFKA_CFG_OFFSETS_TOPIC_REPLICATION_FACTOR=3
+#       - KAFKA_CFG_TRANSACTION_STATE_LOG_REPLICATION_FACTOR=3
+#       - KAFKA_CFG_TRANSACTION_STATE_LOG_MIN_ISR=2
+#     container_name: Kafka-2-douyin
+# 
+#   kafka-ui:
+#     image: provectuslabs/kafka-ui:master
+#     ports:
+#       - "8080:8080"
+#     environment:
+#       - KAFKA_CLUSTERS_0_NAME=local
+#       - KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS=kafka-0:9092,kafka-1:9092,kafka-2:9092
+#     depends_on:
+#       - kafka-0
+#       - kafka-1
+#       - kafka-2
+#     container_name: Kafka-ui-douyin
+# 
+#   canal:
+#     image: canal/canal-server:latest
+#     ports:
+#       - "11111:11111"
+#     environment:
+#       - canal.instance.mysql.slaveId=11
+#       - canal.auto.scan=true
+#       - canal.instance.master.address=mysql:3306
+#       - canal.instance.tsdb.dbUsername=canal
+#       - canal.instance.tsdb.dbPassword=canal
+#       - canal.instance.tsdb.enable=true
+#     container_name: Canal-douyin
+#   
+  api:
+    build:
+      context: .
+      dockerfile: docker/api/dockerfile
+    command: /api
+    # depends_on:
+      # - mysql
+      # - redis
+      # - kafka-0
+      # - kafka-1
+      # - kafka-2
+      # - canal
     ports:
-      - "3306:3306"
-    environment:
-      MYSQL_ROOT_PASSWORD: '123456'
-      MYSQL_DATABASE: douyin
-    container_name: Mysql-douyin
+      - "8888:8888"
+    container_name: Api-douyin
 
-  redis:
-    image: redis:latest
-    ports:
-      - "6379:6379"
-    container_name: Redis-douyin
-
-  kafka-0:
-    image: bitnami/kafka:latest
-    ports:
-      - "9092:9092"
-    environment:
-      # KRaft settings
-      - KAFKA_CFG_NODE_ID=0
-      - KAFKA_CFG_PROCESS_ROLES=controller,broker
-      - KAFKA_CFG_CONTROLLER_QUORUM_VOTERS=0@kafka-0:9093,1@kafka-1:9093,2@kafka-2:9093
-      - KAFKA_KRAFT_CLUSTER_ID=abcdefghijklmnopqrstuv
-      # Listeners
-      - KAFKA_CFG_LISTENERS=PLAINTEXT://:9092,CONTROLLER://:9093
-      - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://192.168.31.247:9092
-      - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=PLAINTEXT:PLAINTEXT,CONTROLLER:PLAINTEXT
-      - KAFKA_CFG_CONTROLLER_LISTENER_NAMES=CONTROLLER
-      - KAFKA_CFG_INTER_BROKER_LISTENER_NAME=PLAINTEXT
-      # Clustering
-      - KAFKA_CFG_OFFSETS_TOPIC_REPLICATION_FACTOR=3
-      - KAFKA_CFG_TRANSACTION_STATE_LOG_REPLICATION_FACTOR=3
-      - KAFKA_CFG_TRANSACTION_STATE_LOG_MIN_ISR=2
-    container_name: Kafka-0-douyin
-  kafka-1:
-    image: bitnami/kafka:latest
-    ports:
-      - "9093:9092"
-    environment:
-      # KRaft settings
-      - KAFKA_CFG_NODE_ID=1
-      - KAFKA_CFG_PROCESS_ROLES=controller,broker
-      - KAFKA_CFG_CONTROLLER_QUORUM_VOTERS=0@kafka-0:9093,1@kafka-1:9093,2@kafka-2:9093
-      - KAFKA_KRAFT_CLUSTER_ID=abcdefghijklmnopqrstuv
-      # Listeners
-      - KAFKA_CFG_LISTENERS=PLAINTEXT://:9092,CONTROLLER://:9093
-      - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://192.168.31.247:9093
-      - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=PLAINTEXT:PLAINTEXT,CONTROLLER:PLAINTEXT
-      - KAFKA_CFG_CONTROLLER_LISTENER_NAMES=CONTROLLER
-      - KAFKA_CFG_INTER_BROKER_LISTENER_NAME=PLAINTEXT
-      # Clustering
-      - KAFKA_CFG_OFFSETS_TOPIC_REPLICATION_FACTOR=3
-      - KAFKA_CFG_TRANSACTION_STATE_LOG_REPLICATION_FACTOR=3
-      - KAFKA_CFG_TRANSACTION_STATE_LOG_MIN_ISR=2
-    container_name: Kafka-1-douyin
-  kafka-2:
-    image: bitnami/kafka:latest
-    ports:
-      - "9094:9092"
-    environment:
-      # KRaft settings
-      - KAFKA_CFG_NODE_ID=2
-      - KAFKA_CFG_PROCESS_ROLES=controller,broker
-      - KAFKA_CFG_CONTROLLER_QUORUM_VOTERS=0@kafka-0:9093,1@kafka-1:9093,2@kafka-2:9093
-      - KAFKA_KRAFT_CLUSTER_ID=abcdefghijklmnopqrstuv
-      # Listeners
-      - KAFKA_CFG_LISTENERS=PLAINTEXT://:9092,CONTROLLER://:9093
-      - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://192.168.31.247:9094
-      - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=PLAINTEXT:PLAINTEXT,CONTROLLER:PLAINTEXT
-      - KAFKA_CFG_CONTROLLER_LISTENER_NAMES=CONTROLLER
-      - KAFKA_CFG_INTER_BROKER_LISTENER_NAME=PLAINTEXT
-      # Clustering
-      - KAFKA_CFG_OFFSETS_TOPIC_REPLICATION_FACTOR=3
-      - KAFKA_CFG_TRANSACTION_STATE_LOG_REPLICATION_FACTOR=3
-      - KAFKA_CFG_TRANSACTION_STATE_LOG_MIN_ISR=2
-    container_name: Kafka-2-douyin
-
-  kafka-ui:
-    image: provectuslabs/kafka-ui:master
-    ports:
-      - "8080:8080"
-    environment:
-      - KAFKA_CLUSTERS_0_NAME=local
-      - KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS=kafka-0:9092,kafka-1:9092,kafka-2:9092
-    depends_on:
-      - kafka-0
-      - kafka-1
-      - kafka-2
-    container_name: Kafka-ui-douyin
-
-  canal:
-    image: canal/canal-server:latest
-    ports:
-      - "11111:11111"
-    environment:
-      - canal.instance.mysql.slaveId=11
-      - canal.auto.scan=true
-      - canal.instance.master.address=mysql:3306
-      - canal.instance.tsdb.dbUsername=canal
-      - canal.instance.tsdb.dbPassword=canal
-      - canal.instance.tsdb.enable=true
-    container_name: Canal-douyin
-  # douyin:
-  #   build:
-  #     context: .
-  #     dockerfile: dockerfile
-  #   # command: sh -c "./wait-for.sh Mysql-douyin:3306 Redis-douyin:6379 Kafka-0-douyin:9092 Kafka-1-douyin:9092 Kafka-2-douyin:9092  -- ./douyin"
-  #   command: sh -c "./wait-for.sh Mysql-douyin:3306 Redis-douyin:6379 -- ./douyin"
-  #   depends_on:
-  #     - mysql
-  #     - redis
-  #     - kafka-0
-  #     - kafka-1
-  #     - kafka-2
-  #   ports:
-  #     - "8888:8888"
-  #   volumes:
-  #     - ./logger/logs:/logger/logs
-  #   container_name: App-douyin
+#   feed:
+#     build: 
+#       context: .
+#       dockerfile: docker/feed/dockerfile
+#     command: ./feed
+#     depends_on:
+#       - api
+#     ports:
+#       - "8890:8890"
+#     container_name: Feed-douyin
+# 
+#   user:
+#     build:
+#       context: .
+#       dockerfile: docker/user/dockerfile
+#     command: ./user
+#     depends_on:
+#       - api
+#     ports:
+#       - "8891:8891"
+#     container_name: User-douyin
+# 
+#   favorite:
+#     build:
+#       context: .
+#       dockerfile: docker/favorite/dockerfile
+#     command: ./favorite
+#     depends_on:
+#       - api
+#     ports:
+#       - "8892:8892"
+#     container_name: Favorite-douyin
+# 
+#   comment:
+#     build:
+#       context: .
+#       dockerfile: docker/comment/dockerfile
+#     command: ./comment
+#     depends_on:
+#       - api
+#     ports:
+#       - "8893:8893"
+#     container_name: Comment-douyin
+# 
+#   publish:
+#     build:
+#       context: .
+#       dockerfile: docker/publish/dockerfile
+#     command: ./publish
+#     depends_on:
+#       - api
+#     ports:
+#       - "8894:8894"
+#     container_name: Publish-douyin
+# 
+#   relation:
+#     build:
+#       context: .
+#       dockerfile: docker/relation/dockerfile
+#     command: ./relation
+#     depends_on:
+#       - api
+#     ports:
+#       - "8895:8895"
+#     container_name: Relation-douyin
+# 
+#   message:
+#     build:
+#       context: .
+#       dockerfile: docker/message/dockerfile
+#     command: ./message
+#     depends_on:
+#       - api
+#     ports:
+#       - "8896:8896"
+#     container_name: Message-douyin
