--- a/docker/api/dockerfile
+++ b/docker/api/dockerfile
@@ -1,7 +1,7 @@
-FROM golang:1.22.1-bookworm AS builder
+FROM golang:alpine AS builder
 
 ENV GO111MODULE=on \
-    CGO_ENABLED=1 \
+    CGO_ENABLED=0 \
     GOOS=linux \
     GOARCH=amd64 \
     GOPROXY=https://goproxy.cn,direct
@@ -14,9 +14,11 @@ RUN go mod download
 
 COPY . .
 
-RUN go build -o api api/main.go
+RUN go build -o app api/main.go
 
 FROM scratch
 
 COPY ./config/config.yaml /config/config.yaml
-COPY --from=builder /douyin/api /
+COPY --from=builder /douyin/app /
+
+ENTRYPOINT ["/app"]
