--- a/docker/favorite/dockerfile
+++ b/docker/favorite/dockerfile
@@ -1,6 +1,7 @@
-FROM golang:1.22.1-bookworm AS builder
+FROM golang:alpine AS builder
 
 ENV GO111MODULE=on \
+    CGO_ENABLED=0 \
     GOOS=linux \
     GOARCH=amd64 \
     GOPROXY=https://goproxy.cn,direct
@@ -13,10 +14,11 @@ RUN go mod download
 
 COPY . .
 
-RUN cd rpc/service/publish && sh build.sh
+RUN cd rpc/service/favorite && sh build.sh
 
 FROM scratch
 
 COPY ./config/config.yaml /config/config.yaml
-
 COPY --from=builder /douyin/rpc/service/favorite/output/bin/favorite /
+
+ENTRYPOINT ["/favorite"]
