--- a/cmd/docker/docker-compose.yml
+++ b/cmd/docker/docker-compose.yml
@@ -27,7 +27,7 @@ services:
       - KAFKA_KRAFT_CLUSTER_ID=abcdefghijklmnopqrstuv
       # Listeners
       - KAFKA_CFG_LISTENERS=PLAINTEXT://:9092,CONTROLLER://:9093
-      - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://192.168.31.247:9092
+      - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://kafka-0:9092
       - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=PLAINTEXT:PLAINTEXT,CONTROLLER:PLAINTEXT
       - KAFKA_CFG_CONTROLLER_LISTENER_NAMES=CONTROLLER
       - KAFKA_CFG_INTER_BROKER_LISTENER_NAME=PLAINTEXT
@@ -48,7 +48,7 @@ services:
       - KAFKA_KRAFT_CLUSTER_ID=abcdefghijklmnopqrstuv
       # Listeners
       - KAFKA_CFG_LISTENERS=PLAINTEXT://:9092,CONTROLLER://:9093
-      - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://192.168.31.247:9093
+      - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://kafka-1:9092
       - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=PLAINTEXT:PLAINTEXT,CONTROLLER:PLAINTEXT
       - KAFKA_CFG_CONTROLLER_LISTENER_NAMES=CONTROLLER
       - KAFKA_CFG_INTER_BROKER_LISTENER_NAME=PLAINTEXT
@@ -69,7 +69,7 @@ services:
       - KAFKA_KRAFT_CLUSTER_ID=abcdefghijklmnopqrstuv
       # Listeners
       - KAFKA_CFG_LISTENERS=PLAINTEXT://:9092,CONTROLLER://:9093
-      - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://192.168.31.247:9094
+      - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://kafka-2:9092
       - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=PLAINTEXT:PLAINTEXT,CONTROLLER:PLAINTEXT
       - KAFKA_CFG_CONTROLLER_LISTENER_NAMES=CONTROLLER
       - KAFKA_CFG_INTER_BROKER_LISTENER_NAME=PLAINTEXT
@@ -113,7 +113,7 @@ services:
   
   api:
     build:
-      context: ..
+      context: ../..
       dockerfile: cmd/docker/api/dockerfile
     depends_on:
       - mysql
@@ -128,7 +128,7 @@ services:
 
   feed:
     build: 
-      context: ..
+      context: ../..
       dockerfile: cmd/docker/feed/dockerfile
     depends_on:
       - api
@@ -138,7 +138,7 @@ services:
 
   user:
     build:
-      context: ..
+      context: ../..
       dockerfile: cmd/docker/user/dockerfile
     depends_on:
       - api
@@ -148,7 +148,7 @@ services:
 
   favorite:
     build:
-      context: ..
+      context: ../..
       dockerfile: cmd/docker/favorite/dockerfile
     depends_on:
       - api
@@ -158,7 +158,7 @@ services:
 
   comment:
     build:
-      context: ..
+      context: ../..
       dockerfile: cmd/docker/comment/dockerfile
     depends_on:
       - api
@@ -168,7 +168,7 @@ services:
 
   publish:
     build:
-      context: ..
+      context: ../..
       dockerfile: cmd/docker/publish/dockerfile
     depends_on:
       - api
@@ -178,7 +178,7 @@ services:
 
   relation:
     build:
-      context: ..
+      context: ../..
       dockerfile: cmd/docker/relation/dockerfile
     depends_on:
       - api
@@ -188,7 +188,7 @@ services:
 
   message:
     build:
-      context: ..
+      context: ../..
       dockerfile: cmd/docker/message/dockerfile
     depends_on:
       - api
