--- a/cmd/docker/docker-compose.yml
+++ b/cmd/docker/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '3.7'
 services:
   api:
     build:
@@ -13,6 +12,8 @@ services:
       - canal
     ports:
       - "8888:8888"
+    sysctls:
+      net.ipv4.ip_local_port_range: "15000 65000"
     container_name: Api-douyin
 
   feed:
