更新文档，暴露示例配置文件

--- a/.gitignore
+++ b/.gitignore
@@ -24,9 +24,9 @@ go.work
 .vscode
 
 # config file
-**/config.yaml
-**/config.yml
-**/config.json
+# **/config.yaml
+# **/config.yml
+# **/config.json
 
 # log file
 **/*.log
