use apline as the base image

--- a/cmd/docker/publish/Dockerfile
+++ b/cmd/docker/publish/Dockerfile
@@ -10,14 +10,11 @@ COPY . .
 
 RUN cd rpc/service/publish && sh build.sh
 
-FROM ubuntu:jammy
-
-RUN sed -i 's/ports.ubuntu.com/mirrors.tuna.tsinghua.edu.cn/g' /etc/apt/sources.list
+FROM alpine:latest
 
 RUN set -eux; \
-    apt-get update; \
-    apt-get install -y --no-install-recommends --fix-missing \
-    ffmpeg 
+    apk update; \
+    apk add --no-cache ffmpeg
 
 COPY --from=builder /douyin/rpc/service/publish/output/bin/publish /
 
