--- a/.github/workflows/docker-image.yaml
+++ b/.github/workflows/docker-image.yaml
@@ -4,6 +4,9 @@ on:
   push:
     branches:
       - 'main'
+  pull_request:
+    branches:
+      - 'main'
 
 jobs:
   docker:
@@ -13,56 +16,57 @@ jobs:
         uses: docker/setup-qemu-action@v3
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-      - name: Login to Docker Hub
+      - name: Login to GitHub Container Registry
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
       - name: Build and push api image
         uses: docker/build-push-action@v5
         with:
           file: ./cmd/docker/api/Dockerfile
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/douyin:api
+          tags: ghcr.io/chuxin0816/douyin:api
       - name: Build and push comment image
         uses: docker/build-push-action@v5
         with:
           file: ./cmd/docker/comment/Dockerfile
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/douyin:comment
+          tags: ghcr.io/chuxin0816/douyin:comment
       - name: Build and push favorite image
         uses: docker/build-push-action@v5
         with:
           file: ./cmd/docker/favorite/Dockerfile
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/douyin:favorite
+          tags: ghcr.io/chuxin0816/douyin:favorite
       - name: Build and push feed image
         uses: docker/build-push-action@v5
         with:
           file: ./cmd/docker/feed/Dockerfile
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/douyin:feed
+          tags: ghcr.io/chuxin0816/douyin:feed
       - name: Build and push message image
         uses: docker/build-push-action@v5
         with:
           file: ./cmd/docker/message/Dockerfile
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/douyin:message
+          tags: ghcr.io/chuxin0816/douyin:message
       - name: Build and push publish image
         uses: docker/build-push-action@v5
         with:
           file: ./cmd/docker/publish/Dockerfile
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/douyin:publish
+          tags: ghcr.io/chuxin0816/douyin:publish
       - name: Build and push relation image
         uses: docker/build-push-action@v5
         with:
           file: ./cmd/docker/relation/Dockerfile
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/douyin:relation
+          tags: ghcr.io/chuxin0816/douyin:relation
       - name: Build and push user image
         uses: docker/build-push-action@v5
         with:
           file: ./cmd/docker/user/Dockerfile
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/douyin:user
+          tags: ghcr.io/chuxin0816/douyin:user
