--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 name: douyin
 services:
   api:
-    image: chuxin0816/douyin:api
+    image: ghcr.io/chuxin0816/douyin:api
     ports:
       - "8888:8888"
     sysctls:
@@ -9,7 +9,7 @@ services:
     container_name: Api
 
   feed:
-    image: chuxin0816/douyin:feed
+    image: ghcr.io/chuxin0816/douyin:feed
     ports:
       - "8890:8890"
     depends_on:
@@ -28,7 +28,7 @@ services:
     container_name: Feed
 
   user:
-    image: chuxin0816/douyin:user
+    image: ghcr.io/chuxin0816/douyin:user
     ports:
       - "8891:8891"
     depends_on:
@@ -47,7 +47,7 @@ services:
     container_name: User
 
   favorite:
-    image: chuxin0816/douyin:favorite
+    image: ghcr.io/chuxin0816/douyin:favorite
     ports:
       - "8892:8892"
     depends_on:
@@ -66,7 +66,7 @@ services:
     container_name: Favorite
 
   comment:
-    image: chuxin0816/douyin:comment
+    image: ghcr.io/chuxin0816/douyin:comment
     ports:
       - "8893:8893"
     depends_on:
@@ -85,7 +85,7 @@ services:
     container_name: Comment
 
   publish:
-    image: chuxin0816/douyin:publish
+    image: ghcr.io/chuxin0816/douyin:publish
     ports:
       - "8894:8894"
     depends_on:
@@ -104,7 +104,7 @@ services:
     container_name: Publish
 
   relation:
-    image: chuxin0816/douyin:relation
+    image: ghcr.io/chuxin0816/douyin:relation
     ports:
       - "8895:8895"
     depends_on:
@@ -123,7 +123,7 @@ services:
     container_name: Relation
 
   message:
-    image: chuxin0816/douyin:message
+    image: ghcr.io/chuxin0816/douyin:message
     ports:
       - "8896:8896"
     depends_on:
