set mysql default time zone +8:00

--- a/config/my.cnf
+++ b/config/my.cnf
@@ -7,6 +7,8 @@ max_connections=1000
 log-bin=mysql-bin # 开启 binlog
 binlog-format=ROW # 选择 ROW 模式
 server_id=1 # 配置 MySQL replaction 需要定义，不要和 canal 的 slaveId 重复
+default_time_zone = '+08:00'
+
 #
 # Remove leading # and set to the amount of RAM for the most important data
 # cache in MySQL. Start at 70% of total RAM for dedicated server, else 10%.
